--- a/rename/.gitignore
+++ b/rename/.gitignore
@@ -5,3 +5,4 @@ raw-sketch-gather.csv
 raw-sketch-gather.with-lineages.csv
 raw-sketch.lineages.csv
 raw-sketch.unclassified.csv
+bin-sketches.renamed.sig.zip
