--- a/rename/.gitignore
+++ b/rename/.gitignore
@@ -3,6 +3,6 @@ raw-sketch-gather.classifications.csv
 raw-sketch-gather.classifications.csv.bak
 raw-sketch-gather.csv
 raw-sketch-gather.with-lineages.csv
-raw-sketch.lineages.csv
 raw-sketch.unclassified.csv
 bin-sketches.renamed.sig.zip
+bin-sketches.lineages.csv
