--- a/rename/.gitignore
+++ b/rename/.gitignore
@@ -6,3 +6,4 @@ raw-sketch-gather.with-lineages.csv
 raw-sketch.unclassified.csv
 bin-sketches.renamed.sig.zip
 bin-sketches.lineages.csv
+bin-sketches.taxburst.html
