add MAG/metag combos

--- a/bin-coverage/Snakefile
+++ b/bin-coverage/Snakefile
@@ -6,6 +6,7 @@ PLOTME = dict(SRR5241537=['AtH_MAG5224',
                           'AtH_MAG10004',
                           'AtH_MAG10647',
                           'AtH_MAG10657',
+                          'AtH_MAG1198',
                           ],
               SRR15057925=[
                   'AtH_MAG825',
@@ -17,6 +18,8 @@ PLOTME = dict(SRR5241537=['AtH_MAG5224',
                   'AtH_MAG7130',
                   'AtH_MAG7386',
                   'AtH_MAG8208',
+                  'AtH_MAG1198',
+                  'AtH_MAG9440',
               ],
               SRR15057930=[
                   'AtH_MAG1198',
@@ -35,6 +38,7 @@ PLOTME = dict(SRR5241537=['AtH_MAG5224',
                   'AtH_MAG8502',
                   'AtH_MAG10738',
                   'AtH_MAG10773',
+                  'AtH_MAG9440',
               ],
               )
 
