enable JSON output

--- a/rename/.gitignore
+++ b/rename/.gitignore
@@ -7,3 +7,4 @@ raw-sketch.unclassified.csv
 bin-sketches.renamed.sig.zip
 bin-sketches.lineages.csv
 bin-sketches.taxburst.html
+bin-sketches.taxburst.json
