--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,7 @@
 base:
- bin_location: '/group/ctbrowngrp2/amhorst/2025-pigparadigm/results/MAGs/all_genomes'
- extension: 'fasta'
+ bin_location: '/group/ctbrowngrp4/2025-amhorst-pigpar-benchmark-data/mattia_data_analysis_ku/unique_genomes/'
+ extension: 'fna'
 
 rename:
  keep_original_ident: False
- new_prefix: AtH                # ignored if keep_original_names is True
-
-
+ new_prefix: NNF_KU                # ignored if keep_original_names is True
