--- a/rename/.gitignore
+++ b/rename/.gitignore
@@ -8,3 +8,5 @@ bin-sketches.renamed.sig.zip
 bin-sketches.lineages.csv
 bin-sketches.taxburst.html
 bin-sketches.taxburst.json
+raw-sketch.custom-lineages.csv
+gtdbtk
