--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,8 @@
 base:
- bin_location: '/group/ctbrowngrp2/amhorst/2025-pigparadigm/results/MAGs/all_genomes'
- extension: 'fasta'
- outputs: 'outputs.ath'
- subsample: True                # test mode
+ bin_location: 'test-data/'
+ extension: 'fasta.gz'
+ outputs: 'outputs.test'
 
 rename:
  keep_original_ident: False
- new_prefix: AtH                # ignored if keep_original_names is True
-
-
+ new_prefix: AtH0                # ignored if keep_original_names is True
