--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,11 @@ base:
 rename:
  keep_original_ident: False
  new_prefix: AtH0                # ignored if keep_original_names is True
+ gtdbtk_classify:
+    - inputs.ath/gtdbtk/archaeal_tax.gtdbtk.novel.2.tsv
+    - inputs.ath/gtdbtk/archaeal_tax.gtdbtk.novel.tsv
+    - inputs.ath/gtdbtk/bacterial_tax.gtdbtk.novel.2.tsv
+    - inputs.ath/gtdbtk/bacterial_tax.gtdbtk.novel.tsv
 
 ###
 
