--- a/defaults.yaml
+++ b/defaults.yaml
@@ -1,3 +1,6 @@
+# location of outputs that can be shared across runs, e.g. GTDB pangenome db.
+shared: 'common/'
+
 databases:
     gtdb_rocksdb: '/group/ctbrowngrp5/sourmash-db.new/gtdb-rs226/gtdb-rs226-k31.dna.rocksdb'
     gtdb_tax: '/group/ctbrowngrp5/sourmash-db.new/gtdb-rs226/gtdb-rs226.lineages.sqldb'
