--- a/defaults.yaml
+++ b/defaults.yaml
@@ -5,6 +5,7 @@ databases:
     gtdb_rocksdb: '/group/ctbrowngrp5/sourmash-db.new/gtdb-rs226/gtdb-rs226-k31.dna.rocksdb'
     gtdb_tax: '/group/ctbrowngrp5/sourmash-db.new/gtdb-rs226/gtdb-rs226.lineages.sqldb'
     gtdb_zip: '/group/ctbrowngrp5/sourmash-db.new/gtdb-rs226/gtdb-rs226-k31.dna.zip'
+    gtdb_k21_zip: '/group/ctbrowngrp5/sourmash-db.new/gtdb-rs226/gtdb-rs226-k21.dna.zip'
 
 rename:
  keep_original_ident: False
